[package]
name = "fxbot"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Discord bot that fixes embeds for twitter.com / x.com links by reposting with https://fxtwitter.com"
homepage = "http://getfx.bot"
repository = "https://github.com/d0nutptr/fxbot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
serenity = "0.11"
regex = "1.10"
